--- a/AutoCmdb/templates/asset/home.html
+++ b/AutoCmdb/templates/asset/home.html
@@ -4,7 +4,7 @@
 <!-- 驗證用戶部門  -->
 {% verify_permissions request as admin_dent %}
 
-
+<!-- TODO 採購 星座 生日 -->
 
 {% block title %}資產首頁{% endblock %}
 
