--- a/AutoCmdb/templates/user/base.html
+++ b/AutoCmdb/templates/user/base.html
@@ -1,48 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'asset/base.html' %}
 
-{% block title %}
-    CDMB
-{% endblock %}
-
-
-{% block sideber_menu %}
-
-
-    {% url 'asset' as asset %}
-    {% url 'department' as department %}
-    {% url 'category' as category %}
-
-    {% url 'user' as user %}
-    {% url 'user_input' as user_input %}
-
-    {% url 'host' as host %}
-
-    <ul class="nav nav-sidebar">
-        <li {% if request.path == user %}class="active"{% endif %}><a href={{ user }}>用戶管理</a></li>
-
-        <li {% if request.path == user_input %}class="active"{% endif %}><a href="{{ user_input }}">匯入</a></li>
-        <li><a href="{% url 'user_output' %}" target="_blank">匯出</a></li>
-
-    </ul>
-
-
-    <ul class="nav nav-sidebar">
-        <li {% if request.path == asset %}class="active"{% endif %}><a href={{ asset }}>資產管理</a></li>
-        <li {% if request.path == department %}class="active"{% endif %}><a href={{ department }}>部門管理</a></li>
-        <li {% if request.path == category %}class="active"{% endif %}><a href={{ category }}>類型管理</a></li>
-    </ul>
-    <ul class="nav nav-sidebar">
-
-        <li {% if request.path == host %}class="active"{% endif %}><a href={{ host }}>運維管理</a></li>
-    </ul>
-
-
-{% endblock %}
-
-
-{% block content %}
-
-{% endblock %}
 
 
 {% block base-js %}
