--- a/AutoCmdb/templates/user/user_edit.html
+++ b/AutoCmdb/templates/user/user_edit.html
@@ -1,4 +1,4 @@
-{% extends 'asset/base.html' %}
+{% extends 'user/base.html' %}
 {% load asset_tags %}
 
 {% block title %}更改用戶{% endblock %}
@@ -19,6 +19,7 @@
     <script src="/static/js/bootstrap-select.js"></script>
 
     <style>
+
         .col-md-2.col-form-label, .col-md-6.form-group, .col-md-10.form-control-static {
             padding-left: 15px;
         }
