--- a/AutoCmdb/templates/asset_repair/add.html
+++ b/AutoCmdb/templates/asset_repair/add.html
@@ -59,9 +59,6 @@
                 </div>
 
 
-
-
-
             </div>
 
             <div class="row">
@@ -140,7 +137,7 @@
             previewFileType: 'any',
             allowedFileExtensions: ['jpg', 'gif', 'png'],
             maxFileCount: 3,
-            showUpload: true,
+            showUpload: false,
             uploadExtraData: {
                 "csrfmiddlewaretoken": csrftoken //帶上CSRF参数
             },
@@ -151,7 +148,7 @@
 
             console.log(data.response);
 
-            $('#form').append('<input  name="photo" value=' + data.response.id + '>')
+            $('#form').append('<input type="hidden" name="photo" value=' + data.response.id + '>')
 
         });
 
@@ -162,15 +159,17 @@
 
             // bind button
             $("#submit").on("click", function (e) {
+                $('#input-id').fileinput('upload');
                 $("#form").submit();
             });
 
 
-            // 提交 新增資產表單
+            // 提交 新增表單
             $("#form").on("submit", function (e) {
 
                 console.log('form');
-                var postData = $(this).serializeArray();
+
+                {#var postData = $(this).serializeArray();#}
 
             });
 
