--- a/AutoCmdb/templates/host/base.html
+++ b/AutoCmdb/templates/host/base.html
@@ -6,8 +6,8 @@
 
 {% block navbar_left %}
 
-    <li class=""><a href="{% url 'asset' %}">資產</a></li>
-    <li class="active"><a href="{% url 'host' %}">運維</a></li>
+    <li class=""><a href="{% url 'asset' %}">部門資產</a></li>
+    <li class="active"><a href="{% url 'host' %}">IT運維</a></li>
 
 {% endblock %}
 
@@ -15,6 +15,8 @@
 
 
     {% url 'host' as host %}
+
+
     {% url 'host_index' as host_index %}
     {% url 'host_repair' as host_repair %}
 
@@ -25,14 +27,18 @@
 
     {% url 'asset' as asset %}
 
-
+    <h1>{{ request.path }}</h1>
     <ul class="nav nav-sidebar">
 
         <ul class="list-group">
 
-            <li class="list-group-item">
-                <a href={{ host }}><i class="fa fa-home"></i> 運維首頁</a>
-            </li>
+
+            <a href="{{ host }}"
+               class="list-group-item {% if request.path == host %}active{% endif %}">
+                <span>
+                    <i class="fa fa-box"></i> 運維首頁
+                </span>
+            </a>
 
 
             <!-- 資產管理 -->
@@ -43,16 +49,31 @@
                         class="fa fa-angle-right"></i></span></a>
 
                 <ul class="list-unstyled collapse" id="assetSubmenu" style="">
-                    <li {% if request.path == host_index %}
-                        class="active"{% endif %}><a href={{ host_index }}> 主機列表</a></li>
-
-                    <li {% if request.path == host_repair %}
-                        class="active"{% endif %}><a href={{ host_repair }}> 電腦維修紀錄表</a></li>
 
 
-                    <li {% if request.path == asset_input %}class="active"{% endif %}><a
-                            href="{{ host_input }}">匯入</a>
+                    <li class="list-group-item"><a href="{{ host_index }}"
+                                                   {% if request.path == host_index %}active{% endif %}">
+                        <span>
+                        <i class="fa fa-box"></i> 主機列表
+                    </span>
+                        </a>
                     </li>
+
+                    <a href="{{ host_repair }}"
+                       class="list-group-item {% if request.path == host_repair %}active{% endif %}">
+                    <span>
+                        <i class="fa fa-box"></i> 電腦維修紀錄表
+                    </span>
+                    </a>
+
+
+                    <a href="{{ host_input }}"
+                       class="list-group-item {% if request.path == host_input %}active{% endif %}">
+                    <span>
+                        <i class="fa fa-box"></i> 匯入
+                    </span>
+                    </a>
+
 
                     <li><a href="{% url 'host_output' %}" target="_blank">匯出</a></li>
                 </ul>
@@ -67,6 +88,8 @@
             </a>
 
         </ul>
+
+
     </ul>
 
 
