--- a/AutoCmdb/templates/host/index.html
+++ b/AutoCmdb/templates/host/index.html
@@ -17,7 +17,12 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="/static/js/bootstrap-select.js"></script>
 
-
+    <style>
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    </style>
 
 {% endblock %}
 
@@ -283,6 +288,31 @@
     </div>
 
     {% csrf_token %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 {% endblock %}
 
